# SlowChat

./: README.md  config.json  pyproject.toml  slowchat.py  test.py
modules/: config.py  gpu.py  req.py
